--- a/Tee-Time-Skeleton/package.json
+++ b/Tee-Time-Skeleton/package.json
@@ -8,14 +8,15 @@
     "start:production": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
+    "morgan": "^1.9.1",
     "path": "^0.12.7",
     "per-env": "^1.0.2",
     "pg": "^8.4.2",
