--- a/Tee-Time-Skeleton/package.json
+++ b/Tee-Time-Skeleton/package.json
@@ -8,6 +8,7 @@
     "start:production": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
